# almapiwrapper

./: .gitignore  .readthedocs.yaml  README.rst  pyproject.toml  readme.txt  requirements.txt  setup.py  update_version.py
almapi/: apikeys.py  record.py
almapi/users/: __init__.py  fetchusers.py  user.py
almapiwrapper/: __init__.py  apikeys.py  configlog.py  record.py  version.py
almapiwrapper/acquisitions/: __init__.py  invoice.py  poline.py  vendor.py
almapiwrapper/analytics/: __init__.py  report.py
almapiwrapper/config/: __init__.py  job.py  library.py  recset.py  reminder.py
almapiwrapper/inventory/: __init__.py  bib.py  collection.py  holding.py  item.py
almapiwrapper/users/: __init__.py  fee.py  fetchusers.py  loan.py  request.py  user.py  utils.py
docs/: acquisitions.rst  analytics.rst  apikeys.rst  bib.rst  collection.rst  conf.py  config.rst  configlog.rst  department.rst  desk.rst  fee.rst  fetchusers.rst  getstarted.rst  holding.rst  index.rst  inventory.rst  item.rst  job.rst  jsonxmldata.rst  library.rst  loan.rst  location.rst  newuser.rst  poline.rst  recset.rst  reminder.rst  request.rst  tests.rst  user.rst  users.rst  usersutils.rst  vendor.rst
test/: test_analytics.py  test_bib.py  test_config.py  test_fee.py  test_fetchusers.py  test_invoice.py  test_loan.py  test_pol.py  test_recset.py  test_request.py  test_user.py  test_vendor.py
test/data/: bib_local_test.xml  config_job_parameters1.xml  fee_test1.json  invoice_test1.json  invoice_test2.json  item_22423662710005504_23224723290005504_01.xml  nz_record_orig.xml  pol_test1.json  (+18 more)
