[project]
name = "almapiwrapper"
version = "1.3.0"
authors = [
  { name="Raphaël Rey", email="raphael.rey@slsp.ch" },
]
description = "This python module is a tool to use Alma APIs. it manages the logs and the backup of the records."
readme = "readme.rst"
requires-python = ">=3.9"

license = "GPL-3.0-or-later"

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Swiss-Library-Service-Platform/almapiwrapper"
"Bug Tracker" = "https://github.com/Swiss-Library-Service-Platform/almapiwrapper/issues"